--- a/history
+++ b/history
@@ -2,7 +2,7 @@
 ;; Automatically written history of CIDER REPL session
 ;; Edit at your own risk
 
-("(-main \"hacker\")" "(-main \"hacker\" \"--posts\" \"2\")" "(-main \"--posts\" \"2\")" ")(-main \"--posts\" \"2\")" "i" "y" "(-main \"--posts\" \"2\")" "(-main \"--blarg\" \"2\")" "(-main \"--posts\" \"2\")" "(-main \"--posts 2\")" "(-main [\"--posts 2\"])" "(-main [--posts 2])" "(*1)" "(-main 10)" "(json/pprint res :escape-slash false :escape-unicode false)" "(json/pprint res :escape-slash false)" "(json/pprint {:a 1 :b 2} :escape-slash false)" "(json/pprint {:a 1 :b 2} {:escape-slash false})" "(json/pprint res {:escape-slash false})" "res" "(json/pprint res)" "(json/write-str res)" "(json/write res)" "(require '[clojure.data.json :as json])" "(into {} res)" "res" "(into {} res)" "(into {} red)" "(first res)" "(def res *1)" "(-main)" " (-main)" "(-main)" "(some-> (html/select mtt [:contect]) first read-string)" "(some-> (html/select mtt [:contect]))" "(html/select mtt [:contect])" "mtt" "(def mtt *1)" "(second (first stor))" "(def stor *1)" "(-main)" "(second (first stories))" "mtt" "(-> (html/select mtt [:a :> html/text])
+("(require '[scrapernews.specs :as specs])" "(require '[scrapernews.specs :as spec])" "(require '[clojure.spec :as s])" "(URI/create \"this.is.bad\")" "(URI/create \"http://this.is.bad\")" "(URI/create \"this is bad\")" "(.toURL  (URI. \"file://this.blows\"))" "(.toURL  (URI. \"https://this.blows\"))" "(.toURL  (URI. \"http://this.blows\"))" "(.toURL  (URI. \"this.blows\"))" "(.toURI  (URI. \"this.blows\"))" "(.toUri  (URI. \"this.blows\"))" "(URI. \"this.blows\")" "(URI. \"/this.blows\")" "(URI. \"http://this.blows\")" "(java.net/URI. \"http://this.blows\")" "(import '[java.net URI])" "(count \"i am the one\") " "(-main)" "(-main \"hacker\")" "(-main \"hacker\" \"--posts\" \"2\")" "(-main \"--posts\" \"2\")" ")(-main \"--posts\" \"2\")" "i" "y" "(-main \"--posts\" \"2\")" "(-main \"--blarg\" \"2\")" "(-main \"--posts\" \"2\")" "(-main \"--posts 2\")" "(-main [\"--posts 2\"])" "(-main [--posts 2])" "(*1)" "(-main 10)" "(json/pprint res :escape-slash false :escape-unicode false)" "(json/pprint res :escape-slash false)" "(json/pprint {:a 1 :b 2} :escape-slash false)" "(json/pprint {:a 1 :b 2} {:escape-slash false})" "(json/pprint res {:escape-slash false})" "res" "(json/pprint res)" "(json/write-str res)" "(json/write res)" "(require '[clojure.data.json :as json])" "(into {} res)" "res" "(into {} res)" "(into {} red)" "(first res)" "(def res *1)" "(-main)" " (-main)" "(-main)" "(some-> (html/select mtt [:contect]) first read-string)" "(some-> (html/select mtt [:contect]))" "(html/select mtt [:contect])" "mtt" "(def mtt *1)" "(second (first stor))" "(def stor *1)" "(-main)" "(second (first stories))" "mtt" "(-> (html/select mtt [:a :> html/text])
                       
                       last
                       (string/split #\" \"))" "(-> (html/select mtt [:a :> html/text])
